RESOLVED FIXED271025
REGRESSION(276077@main) http/tests/navigation/parsed-iframe-dynamic-form-back-entry.html asserts in debug builds
https://bugs.webkit.org/show_bug.cgi?id=271025
Summary REGRESSION(276077@main) http/tests/navigation/parsed-iframe-dynamic-form-back...
Alex Christensen
Reported 2024-03-14 17:48:04 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-14 17:48:16 PDT
Alex Christensen
Comment 2 2024-03-14 17:52:24 PDT
EWS
Comment 3 2024-03-14 20:04:05 PDT
Committed 276132@main (2524a1511ef0): <https://commits.webkit.org/276132@main> Reviewed commits have been landed. Closing PR #25921 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.