REGRESSION(276077@main) http/tests/navigation/parsed-iframe-dynamic-form-back-entry.html asserts in debug builds https://bugs.webkit.org/show_bug.cgi?id=271025 rdar://124649753

Reviewed by Charlie Wolfe.

If you run the test http/tests/navigation/page-cache-mediakeysession.html followed by the test
http/tests/navigation/parsed-iframe-dynamic-form-back-entry.html then RemoteLegacyCDMFactoryProxy::clear is called
from the RemoteLegacyCDMFactoryProxy destructor which is called from the unique_ptr destructor which is calld
from the GPUConnectionToWebProcess destructor.  ThreadSafeWeakPtr::get returns null if the destructor has begun,
but WeakPtr::get does not.  So to fix this crash, go back to using WeakPtr in this case.

* Source/WebKit/GPUProcess/media/RemoteLegacyCDMFactoryProxy.h:

Canonical link: https://commits.webkit.org/276132@main